# uk-sic-codes

./: LICENSE  README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/uk_sic_codes/: __init__.py  data.py
src/: data.ts  index.ts
test/: index.test.js
