[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-sic-codes"
version = "1.0.0"
description = "Fast, zero-dependency UK SIC 2007 code lookup, search, and validation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "BORSCH.AI", email = "hello@borsch.ai" }]
keywords = ["uk", "sic", "codes", "companies-house", "business", "classification"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://borsch.ai"
Repository = "https://github.com/borschai/uk-sic-codes"
Documentation = "https://github.com/borschai/uk-sic-codes#readme"
